# infnet

./: .gitignore  Makefile  README.md  pyproject.toml
docs/avancado/: bigo.md  indice.md  linux.md  python.md
docs/avancado/scripts/: sort.py  zero_lista
src/: primeiro.py
test/: test_primeiro.py
