[tool.poetry]
name = "infnet"
version = "0.1.0"
description = "Projeeto de teste para alunos do Infnet"
authors = ["zerocopia <zerodevsystem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
